Archive2/74/a39a7f11adca33/output
main.cpp:1:1: error: 'The' does not name a type
 The quick brown fox jumped over the lazy dog
 ^
